[package]
name = "windows-build-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wbt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = "3.1.6"

# retrieve files from web
reqwest = { version = "0.11", features = ["blocking"] }

# log
log = "0.4.14"
env_logger = "0.9.0"

# json
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.79"

# sha256
sha2 = "0.10.2"

# parallelism
rayon = "1.5"
